--- a/p8105_hw1_amv2187.md
+++ b/p8105_hw1_amv2187.md
@@ -17,34 +17,45 @@ p1_df = tibble(
   factor_vec = c(rep('Y', n/2), rep('N', n/2)) # factor vector of length 10
 )
 
+head(p1_df) # show first few rows of p1_df
+```
+
+    ## # A tibble: 6 x 4
+    ##   unif_10 greater_than_2 char_vec factor_vec
+    ##     <dbl> <lgl>          <chr>    <chr>     
+    ## 1   2.75  TRUE           a        Y         
+    ## 2   1.15  FALSE          a        Y         
+    ## 3   1.67  FALSE          a        Y         
+    ## 4   2.65  TRUE           a        Y         
+    ## 5   0.391 FALSE          a        Y         
+    ## 6   1.54  FALSE          a        N
+
+``` r
 # Take mean of each column
-mean(p1_df$unif_10)
+avg_num = mean(p1_df$unif_10)
+avg_logical = mean(p1_df$greater_than_2)
+avg_char = mean(p1_df$char_vec)
+avg_factor = mean(p1_df$factor_vec)
+
+# Print column means
+print(c(avg_num, avg_logical, avg_char, avg_factor))
 ```
 
-    ## [1] 2.100338
-
-``` r
-mean(p1_df$greater_than_2)
-```
-
-    ## [1] 0.6
-
-``` r
-mean(p1_df$char_vec)
-```
-
-    ## Warning in mean.default(p1_df$char_vec): argument is not numeric or
-    ## logical: returning NA
-
-    ## [1] NA
-
-``` r
-mean(p1_df$factor_vec)
-```
-
-    ## Warning in mean.default(p1_df$factor_vec): argument is not numeric or
-    ## logical: returning NA
-
-    ## [1] NA
+    ## [1] 1.931513 0.400000       NA       NA
 
 Taking the mean of the numeric and logical vectors in 'p1\_df' is successful; taking the mean of the character and factor vectors is not. This is intuitive for the numeric vector. In the case of the logical vector, the function base::mean automatically converts logical TRUE/FALSE to numeric 1/0, and takes the arithmetic average. Conversely, characters and factors cannot be converted to a numeric format in any default way, and thus taking the mean cannot be done.
+
+The following code attempts to convert the logical, character, and factor vectors to numeric class. The logical vector successfully convert TRUE to 1 and FALSE to 0. The character and factor vectors are unable to convert to numeric, and instead return a list of NAs.
+
+``` r
+as.numeric(p1_df$greater_than_2)
+as.numeric(p1_df$char_vec)
+as.numeric(p1_df$factor_vec)
+```
+
+The next chunk converts character-&gt;factor-&gt;numeric (successfully!), and factor-&gt;character-&gt;numeric (unsuccessfully).
+
+``` r
+as.numeric(as.factor(p1_df$char_vec))
+as.numeric(as.character(p1_df$factor_vec))
+```
