--- a/p8105_hw1_amv2187.md
+++ b/p8105_hw1_amv2187.md
@@ -14,7 +14,7 @@ set.seed(1) # set a seed for reproducibility
 # Create tbl_df 
 p1_df = tibble(
   unif_10 = runif(n = n, min = 0, max = 5), # random vector of size 10 selected from uniform [0,5]
-  greater_than_2 = ifelse(unif_10 > 2, T, F), # logical vector. TRUE if value generated in unif_10 greater than 2; FALSE if less than or equal to 2
+  greater_than_2 = (unif_10 > 2), # logical vector. TRUE if value generated in unif_10 greater than 2; FALSE if less than or equal to 2
   char_vec = rep('a', n), # character vector of length 10,
   factor_vec = c(rep('Y', n/2), rep('N', n/2)) # factor vector of length 10
 )
@@ -45,7 +45,7 @@ print(c(avg_num, avg_logical, avg_char, avg_factor))
 
     ## [1] 2.757569 0.600000       NA       NA
 
-Taking the mean of the numeric and logical vectors in `p1_df` is successful; taking the mean of the character and factor vectors is not. This is intuitive for the numeric vector. In the case of the logical vector, the function base::mean automatically converts logical TRUE/FALSE to numeric 1/0, and takes the arithmetic average. Conversely, characters and factors cannot be converted to a numeric format in any default way, and thus taking the mean cannot be done.
+Taking the mean of the numeric and logical vectors in `p1_df` is successful; taking the mean of the character and factor vectors is not. This is intuitive for the numeric vector. In the case of the logical vector, the function `base::mean` automatically converts logical TRUE/FALSE to numeric 1/0, and takes the arithmetic average. Conversely, characters and factors cannot be converted to a numeric format in any default way, and thus taking the mean cannot be done.
 
 The following code attempts to convert the logical, character, and factor vectors to numeric class. The logical vector successfully convert TRUE to 1 and FALSE to 0. The character and factor vectors are unable to convert to numeric, and instead return a list of NAs.
 
@@ -68,8 +68,6 @@ Problem 2
 ``` r
 n = 1000 # number of rows in new data frame
 
-#set.seed(1) 
-
 # Create tbl_df
 p2_df = tibble(
   x = rnorm(n = n),
@@ -78,7 +76,19 @@ p2_df = tibble(
   num_vec = as.numeric(sum_gt_0), # coerced numeric vector of sum_gt_0
   factor_vec = as.factor(sum_gt_0) # coerced character vector of sum_gt_0
 )
+
+head(p2_df)
 ```
+
+    ## # A tibble: 6 x 5
+    ##        x      y sum_gt_0 num_vec factor_vec
+    ##    <dbl>  <dbl> <lgl>      <dbl> <fct>     
+    ## 1 -0.820 -1.66  FALSE          0 FALSE     
+    ## 2  0.487  0.811 TRUE           1 TRUE      
+    ## 3  0.738 -1.91  FALSE          0 FALSE     
+    ## 4  0.576 -1.25  FALSE          0 FALSE     
+    ## 5 -0.305  0.998 TRUE           1 TRUE      
+    ## 6  1.51  -0.541 TRUE           1 TRUE
 
 The number of observations (rows) and variables (columns) in this data frame is (1000, 5), respectively. The mean of x is -0.0106382; the median of x is -0.031318. The proportions of observations for which `x + y > 0` is 0.49.
 
