--- a/p8105_hw1_amv2187.md
+++ b/p8105_hw1_amv2187.md
@@ -45,9 +45,9 @@ print(c(avg_num, avg_logical, avg_char, avg_factor))
 
     ## [1] 2.757569 0.600000       NA       NA
 
-Taking the mean of the numeric and logical vectors in `p1_df` is successful; taking the mean of the character and factor vectors is not. This is intuitive for the numeric vector. In the case of the logical vector, the function `base::mean` automatically converts logical TRUE/FALSE to numeric 1/0, and takes the arithmetic average. Conversely, characters and factors cannot be converted to a numeric format in any default way, and thus taking the mean cannot be done.
+Taking the mean of the numeric and logical vectors in `p1_df` is successful; taking the mean of the character and factor vectors is not. This is intuitive for the numeric vector. In the case of the logical vector, the function `base::mean` automatically converts logical `TRUE`/`FALSE` to numeric 1/0, and takes the arithmetic average. Conversely, characters and factors cannot be converted to a numeric format in any default way, and thus taking the mean cannot be done.
 
-The following code attempts to convert the logical, character, and factor vectors to numeric class. The logical vector successfully convert TRUE to 1 and FALSE to 0. The character and factor vectors are unable to convert to numeric, and instead return a list of NAs.
+The following code attempts to convert the logical, character, and factor vectors to numeric class. The logical vector successfully convert `TRUE` to 1 and `FALSE` to 0. The character and factor vectors are unable to convert to numeric, and instead return a list of `NA`s.
 
 ``` r
 as.numeric(p1_df$greater_than_2)
@@ -73,37 +73,37 @@ p2_df = tibble(
   x = rnorm(n = n),
   y = rnorm(n = n),
   sum_gt_0 = (x + y > 0), # logical vector. TRUE if x+y>0, FALSE otherwise
-  num_vec = as.numeric(sum_gt_0), # coerced numeric vector of sum_gt_0
-  factor_vec = as.factor(sum_gt_0) # coerced character vector of sum_gt_0
+  num_vec_coerced = as.numeric(sum_gt_0), # coerced numeric vector of sum_gt_0
+  factor_vec_coerced = as.factor(sum_gt_0) # coerced character vector of sum_gt_0
 )
 
 head(p2_df)
 ```
 
     ## # A tibble: 6 x 5
-    ##        x      y sum_gt_0 num_vec factor_vec
-    ##    <dbl>  <dbl> <lgl>      <dbl> <fct>     
-    ## 1 -0.820 -1.66  FALSE          0 FALSE     
-    ## 2  0.487  0.811 TRUE           1 TRUE      
-    ## 3  0.738 -1.91  FALSE          0 FALSE     
-    ## 4  0.576 -1.25  FALSE          0 FALSE     
-    ## 5 -0.305  0.998 TRUE           1 TRUE      
-    ## 6  1.51  -0.541 TRUE           1 TRUE
+    ##        x      y sum_gt_0 num_vec_coerced factor_vec_coerced
+    ##    <dbl>  <dbl> <lgl>              <dbl> <fct>             
+    ## 1 -0.820 -1.66  FALSE                  0 FALSE             
+    ## 2  0.487  0.811 TRUE                   1 TRUE              
+    ## 3  0.738 -1.91  FALSE                  0 FALSE             
+    ## 4  0.576 -1.25  FALSE                  0 FALSE             
+    ## 5 -0.305  0.998 TRUE                   1 TRUE              
+    ## 6  1.51  -0.541 TRUE                   1 TRUE
 
-The number of observations (rows) and variables (columns) in this data frame is (1000, 5), respectively. The mean of x is -0.0106382; the median of x is -0.031318. The proportions of observations for which `x + y > 0` is 0.49.
+The number of observations (rows) and variables (columns) in this data frame is (1000, 5), respectively. The mean of x is -0.0106382; the median of x is -0.031318. The proportion of observations for which `x + y > 0` is 0.49.
 
 ``` r
 plot_1 = ggplot(data = p2_df, aes(x = x, y = y, color = sum_gt_0)) +
   geom_point() + 
   ggtitle('Scatterplot 1: Color using logical vector') +
-  labs(color = 'x + y > 0')
+  labs(color = 'x + y > 0') # legend title
 plot_1
 ```
 
 ![](p8105_hw1_amv2187_files/figure-markdown_github/scatterplot-1.png)
 
 ``` r
-ggplot(data = p2_df, aes(x = x, y = y, color = num_vec)) +
+ggplot(data = p2_df, aes(x = x, y = y, color = num_vec_coerced)) +
   geom_point() + 
   ggtitle('Scatterplot 2: Color using numeric vector') +
   labs(color = 'x + y > 0')
@@ -112,7 +112,7 @@ ggplot(data = p2_df, aes(x = x, y = y, color = num_vec)) +
 ![](p8105_hw1_amv2187_files/figure-markdown_github/scatterplot-2.png)
 
 ``` r
-ggplot(data = p2_df, aes(x = x, y = y, color = factor_vec)) +
+ggplot(data = p2_df, aes(x = x, y = y, color = factor_vec_coerced)) +
   geom_point() + 
   ggtitle('Scatterplot 3: Color using factor vector') +
   labs(color = 'x + y > 0')
@@ -121,6 +121,8 @@ ggplot(data = p2_df, aes(x = x, y = y, color = factor_vec)) +
 ![](p8105_hw1_amv2187_files/figure-markdown_github/scatterplot-3.png)
 
 As can be seen from the plots, color is assigned in a binary fashion to the logical and factor variables, whereas the numeric vector assigns color on a gradient.
+
+Next, I save the first scatterplot as a PDF.
 
 ``` r
 getwd()
